--- a/index.css
+++ b/index.css
@@ -13,14 +13,11 @@ body {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	font-family: "Lexend Peta";
+	font-family: "Tomorrow";
   display: flex;
   align-items: center;
   flex-direction: column;
 }
-/* * { */
-/* 	font-family: "Lexend Peta"; */
-/* } */
 
 h1, h2, h3, h4, h5, h6, p, a {
 	color: #ffffff;
@@ -106,7 +103,7 @@ h1 {
 	position: relative;
 	
 	color: #ffffff;
-	font-family: "Poppins";
+	font-family: "Tomorrow";
 	font-style: normal;
 	font-weight: 700;
 	text-align: center;
@@ -289,7 +286,7 @@ dropdown-box {
 
 .basic-paragraph, .basic-paragraph a {
 	font-size: 1em;
-	font-family: Poppins;
+	font-family: Tomorrow;
 	font-weight: 400;
 	padding-bottom: max(3em, 3vh);
 	max-width: min(700px, 80vw);
@@ -304,13 +301,14 @@ ul {
 }
 
 li {
-	font-family: Poppins;
+	font-family: Tomorrow;
 }
 
 table {
 	max-width: min(700px, 80vw);
 	margin: 0 auto;
 	color:white;
+	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
 table td, table th {
@@ -341,7 +339,7 @@ table.benefits-table th {
 
 table.benefits-table td {
 	text-align: left;
-	font-family: Poppins;
+	font-family: Tomorrow;
 }
 
 table.directors-table {
@@ -356,7 +354,7 @@ table.directors-table tr {
 
 table.directors-table th {
 	text-align: left;
-	font-family: Poppins;
+	font-family: Tomorrow;
 	width: min(320px, 35vw);
 	min-width: 230px;
 }
