basic info change, link to sign-up form

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,14 +32,14 @@
               id="eventdate"
               style="font-size: max(16px, min(2vw, 4vh)); flex: 2 2 20%"
             >
-              April 13 - 14
+              February 1 - 2
             </h3>
           </div>
         </div>
       </div>
       <a
         id="apply-link"
-        href="https://forms.gle/J1aCmrzgfmGcwAFN9"
+        href="https://docs.google.com/forms/d/e/1FAIpQLSeseq3WlXBgjBstpkevuf67iK4hSnYpBexU1laiWSPNzs9Osg/viewform?usp=header"
         style="display: block; font-size: min(2.5vh, 1em); position: sticky"
         target="_blank"
         ><button
@@ -56,7 +56,7 @@
       <p
         style="
           font-size: 1em;
-          font-family: Poppins;
+          font-family: Tomorrow;
           font-weight: 400;
           padding-bottom: max(3em, 3vh);
           max-width: min(700px, 80vw);
@@ -182,7 +182,7 @@
       ></dropdown-box>
       <dropdown-box
         header="What are the themes/tracks?"
-        text="Make sure to follow our Instagram account before Week 2 of Spring quarter, we will be doing a theme and track reveal leading up to the event!!"
+        text="Make sure to follow our Instagram account before Week 3 of Winter quarter, we will be doing a theme and track reveal leading up to the event!!"
       ></dropdown-box>
       <dropdown-box
         header="Where is it?"
@@ -190,11 +190,15 @@
       ></dropdown-box>
       <dropdown-box
         header="When is it?"
-        text="April 13, 2024 8AM - April 14, 2024 12PM"
+        text="February 1, 2025 8AM - February 2, 2025 12PM"
       ></dropdown-box>
       <dropdown-box
         header="Where can I apply to be a mentor or judge?"
         text="Email <a href='mailto:hardhack@eng.ucsd.edu'>hardhack@eng.ucsd.edu</a> if you are interested in volunteering as a mentor and/or presiding as a judge."
+      ></dropdown-box>
+      <dropdown-box
+        header="Will the event be held overnight?"
+        text="Yes, this year we have secured overnight security, so the event will be held overnight. Participants are welcome to stay throughout the night to work on their projects!"
       ></dropdown-box>
     </div>
 {% endblock content %}
