--- a/templates/sponsors.html
+++ b/templates/sponsors.html
@@ -1,113 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <!-- change font, colors -->
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>H.A.R.D. Hack | Sponsors</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <meta
-      name="description"
-      content="Hard Hack is a UCSD hardware-focused hackathon."
-    />
-    <meta
-      name="keywords"
-      content="Hard Hack, UCSD, UCSD Hard Hack, Hard Hack San Diego, Hardware Hackathon, Hard Hack 2023, Hard Hack website, Hard Hack instagram, Hard Hack media, Hard Hack at UCSD, Hard Hack at San Diego, Hackathon, Hackathon UCSD"
-    />
-    <meta name="author" content="Hard Hack" />
-    <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="fonts.css" />
-    <link rel="stylesheet" href="./assets/modules/dropdown/dropdown.css" />
-    <link rel="stylesheet" href="./assets/modules/heading/heading.css" />
-    
-    <script src="./assets/libs/jquery.min.js"></script>
-    <script src="index.js"></script>
+{% extends "base.html" %}
 
-    <script src="./assets/modules/dropdown/dropdown.js"></script>
-    <script src="./assets/modules/heading/heading.js"></script>
+{% block title %}Sponsors{% endblock title %}
 
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./assets/favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./assets/favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./assets/favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="./assets/favicon/site.webmanifest" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
-  </head>
 
-  <!-- START OF BODY -->
-  <body>
-    <div id="menu-bar" class="background-element">
-      <a href="/index"><span>Home</span></a>
-      <a href="/sponsors"><span>Sponsor Us</span></a>
-      <a href="/submissions"><span>Submissions</span></a>
-      <a
-        href="https://docs.google.com/forms/d/e/1FAIpQLSfA1I-pSimuTlpifzKSWF5s5FZ08zvofOefbBSUjUbdeaurdg/viewform"
-        target="_blank"
-      ><span>Submit Your Project</span>
-      </a>
-    </div>
-    <div id="dropdown-menu-bar" class="background-element">
-      <div
-        class="hamburger-icon"
-        style="position: absolute; z-index: 1; right: 0px; margin: 1em 1.5em"
-      >
-        <div class="hamburger-bar1"></div>
-        <div class="hamburger-bar2"></div>
-        <div class="hamburger-bar3"></div>
-      </div>
-      <div
-        id="dropdown-menu-bar-items"
-        style="
-          background-image: url(./assets/images/background.png);
-          position: relative;
-          width: 100%;
-          height: 0px;
-          overflow: hidden;
-        "
-      >
-        <div>
-          <div style="height: 68px"></div>
-          <a href="/index"><p>Home</p></a>
-          <a href="/sponsors"><p>Sponsor Us</p></a>
-          <a href="/submissions"><p>Submissions</p></a>
-          <a
-            href="https://docs.google.com/forms/d/e/1FAIpQLSfA1I-pSimuTlpifzKSWF5s5FZ08zvofOefbBSUjUbdeaurdg/viewform"
-            target="_blank"
-          ><p>Submit Your Project</p>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div id="background">
-      <img
-        class="background-element"
-        src="./assets/images/hard_hack_small_logo.png"
-        style="width: 10%; min-width: 50px; top: max(3vh, 20px); left: 20px"
-      />
-    </div>
-
-    
+{% block content %}
 <!-- SPONSORS FAQ -->
 
 <h1 style="
-      color: #fff3ce;
-      text-shadow: 3px 3px 0 #be8f14;
       margin-bottom:1em;
       font-size:calc(1em + 3vw);
       margin-top:4em;
@@ -128,11 +27,11 @@
 </div>
 
 <div class="text-page" style="min-height: auto;">
-  <h1 style="margin-bottom:1em; color:#153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Become a Sponsor</h1>
+  <h1 style="margin-bottom:1em">Become a Sponsor</h1>
 
   <p class="basic-paragraph" style="padding-bottom: 10px">
     <strong>We promise you...</strong>
-  <ul style="font-family: Tomorrow; color:white">
+  <ul style="font-family: Poppins; color: white">
     <li>Active involvement in the event planning process,</li>
     <li>Direct interaction with our competitve talent pool,</li>
     <li>Flexible organization of technical and professional workshops,</li>
@@ -147,7 +46,7 @@
 </div>
 
 <div style="padding-bottom: max(3em, 3vh);">
-  <h1 style="margin-bottom:1em; color:#153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Sponsorship Tiers</h1>
+  <h1 style="margin-bottom:1em">Sponsorship Tiers</h1>
   <table class="sponsorship-table">
     <tr>
       <th></th>
@@ -208,7 +107,7 @@
 
 <div id="benefits-glossary">
   <!-- TODO: Add padding above glossary -->
-  <h1 style="color:#153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Benefits Glossary</h1>
+  <h1>Benefits Glossary</h1>
   <table class="benefits-table" style="padding-bottom:max(4em, 4vh)">
     <tr>
       <th>Benefit</th>
@@ -279,80 +178,4 @@
   </table>
 </div>
 
-
-
-        <!-- ASK QUESTIONS -->
-        <div class="center" id="questions-div" style="padding-bottom: 4em">
-          <h1 style="margin-bottom: 1em; color:#153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Any More Questions?</h1>
-          <form id="questionsForm">
-            <input
-              type="text"
-              id="email"
-              placeholder="Email"
-              style="
-                font-family: Tomorrow;
-                width: min(80%, 600px);
-                height: 36px;
-                margin-bottom: 16px;
-                border-radius: 8px;
-                padding: 10px;
-                border: none;
-              "
-            />
-            <br />
-            <textarea
-              type="text"
-              id="question"
-              rows="10"
-              cols="50"
-              placeholder="Enter Your Question Here..."
-              style=
-                "font-family: Tomorrow; 
-                width: min(80%, 600px); 
-                padding: 10px; 
-                border-radius: 8px; 
-                border: none;"
-            ></textarea>
-          </form>
-          <br />
-    
-          <button onclick="submitForm()" class="projects-button center main-font" style="font-family: Tomorrow">
-            Submit Form
-          </button>
-          <p id="error"></p>
-        </div>
-        <script>
-          function clearMessage() {
-            document.getElementById("error").innerHTML = "";
-          }
-    
-          function submitForm() {
-            console.log("pressed");
-            const email = document.getElementById("email").value;
-            const question = document.getElementById("question").value;
-            if (email == "") {
-              document.getElementById("error").innerHTML =
-                "Email Field Cannot Be Empty";
-            } else if (question == "") {
-              document.getElementById("error").innerHTML =
-                "Question Field Cannot Be Empty";
-            } else {
-              let url =
-                "https://docs.google.com/forms/d/e/1FAIpQLScCxzKi5_67jKD9_eaozGTnyLAFV5Jmlz1ku3ZVqKm3PMqH-g/formResponse";
-              url +=
-                "&entry.333490010=" +
-                encodeURIComponent(email) +
-                "&entry.1301356340=" +
-                encodeURIComponent(question) +
-                "&submit=Submit";
-    
-              fetch(url);
-              document.getElementById("error").innerHTML =
-                "Your Question Was Successfully Submitted!";
-              document.getElementById("questionsForm").reset();
-              setTimeout(clearMessage, 5000);
-            }
-          }
-        </script>
-  </body>
-</html>
+{% endblock content %}
