--- a/templates/sponsors.html
+++ b/templates/sponsors.html
@@ -7,6 +7,8 @@
 <!-- SPONSORS FAQ -->
 
 <h1 style="
+      color: #fff3ce;
+      text-shadow: 3px 3px 0 #be8f14;
       margin-bottom:1em;
       font-size:calc(1em + 3vw);
       margin-top:4em;
@@ -27,11 +29,11 @@
 </div>
 
 <div class="text-page" style="min-height: auto;">
-  <h1 style="margin-bottom:1em">Become a Sponsor</h1>
+  <h1 style="margin-bottom:1em; color:#153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Become a Sponsor</h1>
 
   <p class="basic-paragraph" style="padding-bottom: 10px">
     <strong>We promise you...</strong>
-  <ul style="font-family: Poppins; color: white">
+  <ul style="font-family: Tomorrow; color:white">
     <li>Active involvement in the event planning process,</li>
     <li>Direct interaction with our competitve talent pool,</li>
     <li>Flexible organization of technical and professional workshops,</li>
@@ -46,7 +48,7 @@
 </div>
 
 <div style="padding-bottom: max(3em, 3vh);">
-  <h1 style="margin-bottom:1em">Sponsorship Tiers</h1>
+  <h1 style="margin-bottom:1em; color:#153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Sponsorship Tiers</h1>
   <table class="sponsorship-table">
     <tr>
       <th></th>
@@ -107,7 +109,7 @@
 
 <div id="benefits-glossary">
   <!-- TODO: Add padding above glossary -->
-  <h1>Benefits Glossary</h1>
+  <h1 style="color:#153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Benefits Glossary</h1>
   <table class="benefits-table" style="padding-bottom:max(4em, 4vh)">
     <tr>
       <th>Benefit</th>
