--- a/templates/base.html
+++ b/templates/base.html
@@ -107,7 +107,7 @@
 
         <!-- ASK QUESTIONS -->
         <div class="center" id="questions-div" style="padding-bottom: 4em">
-          <h1 style="margin-bottom: 1em; color: #153cb4">Any More Questions?</h1>
+          <h1 style="margin-bottom: 1em; color: #153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Any More Questions?</h1>
           <form id="questionsForm">
             <input
               type="text"
