--- a/templates/index.html
+++ b/templates/index.html
@@ -9,15 +9,15 @@
               class="center"
               src="./assets/images/hard_hack_logo.png"
               style="
-                max-height: 700px;
+                max-height: 600px;
                 min-height: 500px;
                 display: block;
                 flex: 6 6 60%;
-                width: 100vw;
+                width: auto;
+                max-width: 100%;
                 object-fit: contain;
                 cursor: zoom-in;
                 margin: auto;
-                margin-left: -100px;
               "
             />
             <p
@@ -42,6 +42,7 @@
               class="big-button center main-font"
               href="https://docs.google.com/forms/d/e/1FAIpQLSeseq3WlXBgjBstpkevuf67iK4hSnYpBexU1laiWSPNzs9Osg/viewform?usp=header"
               style="
+                margin-top: 1em;
                 display: inline-block;
                 font-size: min(2.5vh, 1em);
                 position: sticky;
@@ -59,7 +60,10 @@
     </div>
 
     <div id="about-page">
-      <h1 style="margin-bottom:1em; margin-top: 40px; color: #153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3)">About</h1>
+      <h1 style="margin-bottom:1em; 
+                margin-top: 3em; 
+                color: #153cb4; 
+                text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3)">About</h1>
       <p
         style="
           font-size: 1em;
