resize banner again

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,10 @@
               src="./assets/images/hard_hack_logo.png"
               style="
                 max-height: 600px;
-                min-height: 400px;
+                min-height: 500px;
                 display: block;
                 flex: 6 6 60%;
-                width: auto;
-                max-width: 100%;
+                width: 90vw;
                 object-fit: contain;
                 cursor: zoom-in;
                 margin: auto;
