--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
               class="big-button center main-font"
               href="https://docs.google.com/forms/d/e/1FAIpQLSeseq3WlXBgjBstpkevuf67iK4hSnYpBexU1laiWSPNzs9Osg/viewform?usp=header"
               style="
-                margin-top: 1em;
+                margin-top: 50px;
                 display: inline-block;
                 font-size: min(2.5vh, 1em);
                 position: sticky;
