use flex box for spacing

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <div id="cover-page">
       <div id="cover-flex">
         <div>
-          <div style="max-height: 60vh; display: flex; flex-direction: column">
+          <div style="max-height: 60vh; display: flex; flex-direction: column; gap: 1em;">
             <img
               class="center"
               src="./assets/images/hard_hack_logo.png"
@@ -16,7 +16,6 @@
                 width: 90vw;
                 object-fit: contain;
                 cursor: zoom-in;
-                margin: auto;
               "
             />
             <p
