spacing adjustments for apply now button

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,7 @@
               class="big-button center main-font"
               href="https://docs.google.com/forms/d/e/1FAIpQLSeseq3WlXBgjBstpkevuf67iK4hSnYpBexU1laiWSPNzs9Osg/viewform?usp=header"
               style="
+                margin-top: 0.5em;
                 display: inline-block;
                 font-size: min(2.5vh, 1em);
                 font-weight: 700;
