fix margin again

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
               src="./assets/images/hard_hack_logo.png"
               style="
                 max-height: 600px;
-                min-height: 50vh;
+                min-height: 300px;
                 display: block;
                 flex: 6 6 60%;
                 width: 90vw;
