--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
             <picture>
               <source
                 srcset="./assets/images/hard_hack_logo_mobile.png"
-                media="(max-width: 1366px)"
+                media="(max-width: 768)"
               />
               <img
                 class="center"
