--- a/index.css
+++ b/index.css
@@ -146,6 +146,7 @@ h1 {
 #cover-flex {
 	display: flex;
 	justify-content: center;
+	align-items: flex-start;
 	height: 100%;
 	min-height: 400px;
 }
