Update banner image based on screen dimension

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,12 @@
 {% block content %}
     <div id="cover-page">
       <div id="cover-flex">
+        <!-- src intentionally kept empty for JS to populate -->
         <div style="max-height: 60vh; display: flex; flex-direction: column; gap: 2em;">
           <img
+            id="banner"
             class="center"
-            src="./assets/images/hard_hack_logo.png"
+            src=""
             style="
               max-height: 600px;
               min-height: 300px;
