--- a/templates/sponsors.html
+++ b/templates/sponsors.html
@@ -178,6 +178,14 @@
       </td>
     </tr>
   </table>
+
+  <div id="sponsors-logo" style="display: flex; flex-direction: column; align-items: center;">
+  <h1 style="margin-top: 4em; color:#153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Our Sponsors</h1>
+    <img
+      src="assets/images/digi_key_logo.png"
+      alt="Sponsor 1 Logo"
+      style="width: auto; height: 200px;"
+    />
 </div>
 
 {% endblock content %}
