--- a/templates/sponsors.html
+++ b/templates/sponsors.html
@@ -180,12 +180,19 @@
   </table>
 
   <div id="sponsors-logo" style="display: flex; flex-direction: column; align-items: center;">
-  <h1 style="margin-top: 4em; color:#153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Our Sponsors</h1>
-    <img
-      src="assets/images/digi_key_logo.png"
-      alt="Sponsor 1 Logo"
-      style="width: auto; height: 200px;"
-    />
-</div>
+    <h1 style="margin-top: 4em; color:#153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Our Sponsors</h1>
+      <div id="logo-container">
+        <img
+          src="assets/images/digi_key_logo.png"
+          alt="Sponsor 1 Logo"
+          style="width: auto; height: 200px;"
+        />
+        <img
+          src="assets/images/qualcomm_logo.png"
+          alt="Sponsor 2 Logo"
+          style="width: 300px; margin-bottom: 4em;"
+        />
+      </div>
+  </div>
 
 {% endblock content %}
