different view for laptop and mobile fix

--- a/templates/sponsors.html
+++ b/templates/sponsors.html
@@ -180,12 +180,12 @@
   </table>
 
   <div id="sponsors-logo" style="display: flex; flex-direction: column;">
-    <h1 style="margin-top: 4em; color:#153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Our Sponsors</h1>
-      <div id="logo-container" style="display: flex; align-items: center;">
+    <h1 style="margin-top: 4em; margin-bottom: 1em; color:#153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Our Sponsors</h1>
+      <div id="logo-container" style="display: flex; justify-content: center; align-items: center;">
         <img
           src="assets/images/digi_key_logo.png"
           alt="Sponsor 1 Logo"
-          style="width: auto; height: 200px;"
+          style="width: 300px; margin-top: -60px;"
         />
         <img
           src="assets/images/qualcomm_logo.png"
